--- a/temp23.html
+++ b/temp23.html
@@ -26,13 +26,18 @@
         // const newArr = num.filter((value) => value > 10);
         // console.log(newArr);
 
-        // const num = [12, 23, 45, 10]
+       
+
+        // const num = ['st01','st02','st09','st05'];
+        // const newArr = num.fi // const num = [12, 23, 45, 10]
         // const newArr = num.find((value) => value > 10);
+        // console.log(newArr);nd((value) => value == 'st02');
         // console.log(newArr);
 
-        const num = ['st01','st02','st09','st05'];
-        const newArr = num.find((value) => value == 'st02');
-        console.log(newArr);
+        const num = [12, 23, 45, 10]
+        const total = score.reduce((sum, value) => sum + value);
+        console.log(total);
+
         
 
     </script>
