--- a/temp24.html
+++ b/temp24.html
@@ -55,6 +55,12 @@
         items.innerHTML = count;
         showTotal();
       };
+      const displayCart = () => {
+        divCartBlock.style.display = "block"
+      }
+      const hideCart = () => {
+         divCartBlock.style.display = "none"
+      }
       const showProducts = () => {
         let str = "";
         products.map((value) => {
@@ -68,12 +74,16 @@
   </head>
   <body onload="showProducts()">
     <h1>My Store</h1>
-    <h4>Cart:<span id="items"></span></h4>
+    <h4 onclick="displayCart()">Cart:<span id="items"></span></h4>
     <hr />
     <h3>Products</h3>
     <div id="divProducts"></div>
-    <h3>My Cart</h3>
-    <div id="divCart"></div>
-    <div id="divTotal"></div>
+
+    <div id="divCartBlock" style="display: none">
+      <h3>My Cart</h3>
+      <div id="divCart"></div>
+      <div id="divTotal"></div>
+      <button onclick="hideCart()">Close</button>
+    </div>
   </body>
 </html>
