--- a/temp26.html
+++ b/temp26.html
@@ -70,7 +70,7 @@
         border: 1px solid gray;
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        width: 100%;+
         margin: 5px;
         border-radius: 5px;
         padding: 3px;
